--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-report-generator": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^12.8.1"
+    "@cypress/code-coverage": "^3.12.46",
+    "cypress": "^12.17.4"
   }
 }
